Zilf/ZilParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g 2010-04-01 02:39:30

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

using Antlr.Runtime.Tree;

namespace  Zilf.Parsing 
{
public partial class ZilParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"COMMENT", 
		"FORM", 
		"LIST", 
		"VECTOR", 
		"UVECTOR", 
		"SEGMENT", 
		"MACRO", 
		"VMACRO", 
		"HASH", 
		"GVAL", 
		"LVAL", 
		"ADECL", 
		"DIGIT", 
		"STRING", 
		"CHAR", 
		"SPACE", 
		"WS", 
		"NATOM", 
		"ATOM_HEAD", 
		"ATOM_TAIL", 
		"ATOM", 
		"NUM", 
		"ATOM_OR_NUM", 
		"SEMI", 
		"COLON", 
		"PERCENT", 
		"LANGLE", 
		"RANGLE", 
		"LPAREN", 
		"RPAREN", 
		"LSQUARE", 
		"RSQUARE", 
		"BANG", 
		"DOT", 
		"COMMA", 
		"APOS"
    };

    public const int UVECTOR = 8;
    public const int APOS = 39;
    public const int LSQUARE = 34;
    public const int PERCENT = 29;
    public const int ATOM_TAIL = 23;
    public const int LANGLE = 30;
    public const int HASH = 12;
    public const int CHAR = 18;
    public const int GVAL = 13;
    public const int BANG = 36;
    public const int RSQUARE = 35;
    public const int ATOM = 24;
    public const int VMACRO = 11;
    public const int LIST = 6;
    public const int EOF = -1;
    public const int SPACE = 19;
    public const int SEMI = 27;
    public const int LPAREN = 32;
    public const int NUM = 25;
    public const int COLON = 28;
    public const int ATOM_OR_NUM = 26;
    public const int RPAREN = 33;
    public const int WS = 20;
    public const int VECTOR = 7;
    public const int COMMA = 38;
    public const int LVAL = 14;
    public const int ATOM_HEAD = 22;
    public const int FORM = 5;
    public const int ADECL = 15;
    public const int DIGIT = 16;
    public const int RANGLE = 31;
    public const int DOT = 37;
    public const int COMMENT = 4;
    public const int NATOM = 21;
    public const int MACRO = 10;
    public const int SEGMENT = 9;
    public const int STRING = 17;

    // delegates
    // delegators



        public ZilParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public ZilParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return ZilParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g"; }
    }


    public class file_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "file"
    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:77:1: file : ( comment | noncomment_expr )* ;
    public ZilParser.file_return file() // throws RecognitionException [1]
    {   
        ZilParser.file_return retval = new ZilParser.file_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        ZilParser.comment_return comment1 = default(ZilParser.comment_return);

        ZilParser.noncomment_expr_return noncomment_expr2 = default(ZilParser.noncomment_expr_return);



        try 
    	{
            // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:77:6: ( ( comment | noncomment_expr )* )
            // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:77:8: ( comment | noncomment_expr )*
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:77:8: ( comment | noncomment_expr )*
            	do 
            	{
            	    int alt1 = 3;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0 == SEMI) )
            	    {
            	        alt1 = 1;
            	    }
            	    else if ( (LA1_0 == HASH || (LA1_0 >= STRING && LA1_0 <= CHAR) || (LA1_0 >= ATOM && LA1_0 <= NUM) || (LA1_0 >= PERCENT && LA1_0 <= LANGLE) || LA1_0 == LPAREN || LA1_0 == LSQUARE || (LA1_0 >= BANG && LA1_0 <= APOS)) )
            	    {
            	        alt1 = 2;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:77:9: comment
            			    {
            			    	PushFollow(FOLLOW_comment_in_file535);
            			    	comment1 = comment();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, comment1.Tree);

            			    }
            			    break;
            			case 2 :
            			    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:77:19: noncomment_expr
            			    {
            			    	PushFollow(FOLLOW_noncomment_expr_in_file539);
            			    	noncomment_expr2 = noncomment_expr();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, noncomment_expr2.Tree);

            			    }
            			    break;

            			default:
            			    goto loop1;
            	    }
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "file"

    public class expr_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expr"
    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:80:1: expr : ( comment )* noncomment_expr ;
    public ZilParser.expr_return expr() // throws RecognitionException [1]
    {   
        ZilParser.expr_return retval = new ZilParser.expr_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        ZilParser.comment_return comment3 = default(ZilParser.comment_return);

        ZilParser.noncomment_expr_return noncomment_expr4 = default(ZilParser.noncomment_expr_return);



        try 
    	{
            // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:80:6: ( ( comment )* noncomment_expr )
            // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:80:8: ( comment )* noncomment_expr
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:80:8: ( comment )*
            	do 
            	{
            	    int alt2 = 2;
            	    int LA2_0 = input.LA(1);

            	    if ( (LA2_0 == SEMI) )
            	    {
            	        alt2 = 1;
            	    }


            	    switch (alt2) 
            		{
            			case 1 :
            			    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:80:8: comment
            			    {
            			    	PushFollow(FOLLOW_comment_in_expr551);
            			    	comment3 = comment();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, comment3.Tree);

            			    }
            			    break;

            			default:
            			    goto loop2;
            	    }
            	} while (true);

            	loop2:
            		;	// Stops C# compiler whining that label 'loop2' has no statements

            	PushFollow(FOLLOW_noncomment_expr_in_expr554);
            	noncomment_expr4 = noncomment_expr();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, noncomment_expr4.Tree);

            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "expr"

    public class comment_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "comment"
    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:83:1: comment : SEMI noncomment_expr -> ^( COMMENT noncomment_expr ) ;
    public ZilParser.comment_return comment() // throws RecognitionException [1]
    {   
        ZilParser.comment_return retval = new ZilParser.comment_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken SEMI5 = null;
        ZilParser.noncomment_expr_return noncomment_expr6 = default(ZilParser.noncomment_expr_return);


        object SEMI5_tree=null;
        RewriteRuleTokenStream stream_SEMI = new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleSubtreeStream stream_noncomment_expr = new RewriteRuleSubtreeStream(adaptor,"rule noncomment_expr");
        try 
    	{
            // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:83:9: ( SEMI noncomment_expr -> ^( COMMENT noncomment_expr ) )
            // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:83:11: SEMI noncomment_expr
            {
            	SEMI5=(IToken)Match(input,SEMI,FOLLOW_SEMI_in_comment564); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_SEMI.Add(SEMI5);

            	PushFollow(FOLLOW_noncomment_expr_in_comment566);
            	noncomment_expr6 = noncomment_expr();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( (state.backtracking==0) ) stream_noncomment_expr.Add(noncomment_expr6.Tree);


            	// AST REWRITE
            	// elements:          noncomment_expr
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	if ( (state.backtracking==0) ) {
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (object)adaptor.GetNilNode();
            	// 83:32: -> ^( COMMENT noncomment_expr )
            	{
            	    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:83:35: ^( COMMENT noncomment_expr )
            	    {
            	    object root_1 = (object)adaptor.GetNilNode();
            	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(COMMENT, "COMMENT"), root_1);

            	    adaptor.AddChild(root_1, stream_noncomment_expr.NextTree());

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;}
            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "comment"

    public class noncomment_expr_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "noncomment_expr"
    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:86:1: noncomment_expr : ( ATOM | ATOM COLON ATOM -> ^( ADECL ATOM ATOM ) | NUM | CHAR | STRING | form | segment | vector | list | macro | HASH ATOM expr -> ^( HASH ATOM expr ) );
    public ZilParser.noncomment_expr_return noncomment_expr() // throws RecognitionException [1]
    {   
        ZilParser.noncomment_expr_return retval = new ZilParser.noncomment_expr_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken ATOM7 = null;
        IToken ATOM8 = null;
        IToken COLON9 = null;
        IToken ATOM10 = null;
        IToken NUM11 = null;
        IToken CHAR12 = null;
        IToken STRING13 = null;
        IToken HASH19 = null;
        IToken ATOM20 = null;
        ZilParser.form_return form14 = default(ZilParser.form_return);

        ZilParser.segment_return segment15 = default(ZilParser.segment_return);

        ZilParser.vector_return vector16 = default(ZilParser.vector_return);

        ZilParser.list_return list17 = default(ZilParser.list_return);

        ZilParser.macro_return macro18 = default(ZilParser.macro_return);

        ZilParser.expr_return expr21 = default(ZilParser.expr_return);


        object ATOM7_tree=null;
        object ATOM8_tree=null;
        object COLON9_tree=null;
        object ATOM10_tree=null;
        object NUM11_tree=null;
        object CHAR12_tree=null;
        object STRING13_tree=null;
        object HASH19_tree=null;
        object ATOM20_tree=null;
        RewriteRuleTokenStream stream_HASH = new RewriteRuleTokenStream(adaptor,"token HASH");
        RewriteRuleTokenStream stream_COLON = new RewriteRuleTokenStream(adaptor,"token COLON");
        RewriteRuleTokenStream stream_ATOM = new RewriteRuleTokenStream(adaptor,"token ATOM");
        RewriteRuleSubtreeStream stream_expr = new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try 
    	{
            // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:87:2: ( ATOM | ATOM COLON ATOM -> ^( ADECL ATOM ATOM ) | NUM | CHAR | STRING | form | segment | vector | list | macro | HASH ATOM expr -> ^( HASH ATOM expr ) )
            int alt3 = 11;
            alt3 = dfa3.Predict(input);
            switch (alt3) 
            {
                case 1 :
                    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:87:4: ATOM
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	ATOM7=(IToken)Match(input,ATOM,FOLLOW_ATOM_in_noncomment_expr585); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{ATOM7_tree = (object)adaptor.Create(ATOM7);
                    		adaptor.AddChild(root_0, ATOM7_tree);
                    	}

                    }
                    break;
                case 2 :
                    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:88:4: ATOM COLON ATOM
                    {
                    	ATOM8=(IToken)Match(input,ATOM,FOLLOW_ATOM_in_noncomment_expr590); if (state.failed) return retval; 
                    	if ( (state.backtracking==0) ) stream_ATOM.Add(ATOM8);

                    	COLON9=(IToken)Match(input,COLON,FOLLOW_COLON_in_noncomment_expr592); if (state.failed) return retval; 
                    	if ( (state.backtracking==0) ) stream_COLON.Add(COLON9);

                    	ATOM10=(IToken)Match(input,ATOM,FOLLOW_ATOM_in_noncomment_expr594); if (state.failed) return retval; 
                    	if ( (state.backtracking==0) ) stream_ATOM.Add(ATOM10);



                    	// AST REWRITE
                    	// elements:          ATOM, ATOM
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	if ( (state.backtracking==0) ) {
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 88:21: -> ^( ADECL ATOM ATOM )
                    	{
                    	    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:88:24: ^( ADECL ATOM ATOM )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ADECL, "ADECL"), root_1);

                    	    adaptor.AddChild(root_1, stream_ATOM.NextNode());
                    	    adaptor.AddChild(root_1, stream_ATOM.NextNode());

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;}
                    }
                    break;
                case 3 :
                    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:89:4: NUM
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	NUM11=(IToken)Match(input,NUM,FOLLOW_NUM_in_noncomment_expr610); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{NUM11_tree = (object)adaptor.Create(NUM11);
                    		adaptor.AddChild(root_0, NUM11_tree);
                    	}

                    }
                    break;
                case 4 :
                    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:90:4: CHAR
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	CHAR12=(IToken)Match(input,CHAR,FOLLOW_CHAR_in_noncomment_expr615); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{CHAR12_tree = (object)adaptor.Create(CHAR12);
                    		adaptor.AddChild(root_0, CHAR12_tree);
                    	}

                    }
                    break;
                case 5 :
                    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:91:4: STRING
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	STRING13=(IToken)Match(input,STRING,FOLLOW_STRING_in_noncomment_expr620); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{STRING13_tree = (object)adaptor.Create(STRING13);
                    		adaptor.AddChild(root_0, STRING13_tree);
                    	}

                    }
                    break;
                case 6 :
                    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:92:4: form
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_form_in_noncomment_expr625);
                    	form14 = form();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, form14.Tree);

                    }
                    break;
                case 7 :
                    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:93:4: segment
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_segment_in_noncomment_expr630);
                    	segment15 = segment();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, segment15.Tree);

                    }
                    break;
                case 8 :
                    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:94:4: vector
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_vector_in_noncomment_expr635);
                    	vector16 = vector();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, vector16.Tree);

                    }
                    break;
                case 9 :
                    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:95:4: list
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_list_in_noncomment_expr640);
                    	list17 = list();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, list17.Tree);

                    }
                    break;
                case 10 :
                    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:96:4: macro
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_macro_in_noncomment_expr645);
                    	macro18 = macro();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, macro18.Tree);

                    }
                    break;
                case 11 :
                    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:97:4: HASH ATOM expr
                    {
                    	HASH19=(IToken)Match(input,HASH,FOLLOW_HASH_in_noncomment_expr650); if (state.failed) return retval; 
                    	if ( (state.backtracking==0) ) stream_HASH.Add(HASH19);

                    	ATOM20=(IToken)Match(input,ATOM,FOLLOW_ATOM_in_noncomment_expr652); if (state.failed) return retval; 
                    	if ( (state.backtracking==0) ) stream_ATOM.Add(ATOM20);

                    	PushFollow(FOLLOW_expr_in_noncomment_expr654);
                    	expr21 = expr();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( (state.backtracking==0) ) stream_expr.Add(expr21.Tree);


                    	// AST REWRITE
                    	// elements:          expr, ATOM, HASH
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	if ( (state.backtracking==0) ) {
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 97:20: -> ^( HASH ATOM expr )
                    	{
                    	    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:97:23: ^( HASH ATOM expr )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot(stream_HASH.NextNode(), root_1);

                    	    adaptor.AddChild(root_1, stream_ATOM.NextNode());
                    	    adaptor.AddChild(root_1, stream_expr.NextTree());

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;}
                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "noncomment_expr"

    public class macro_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "macro"
    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:100:1: macro : PERCENT ( ( PERCENT )=> PERCENT expr -> ^( VMACRO expr ) | expr -> ^( MACRO expr ) ) ;
    public ZilParser.macro_return macro() // throws RecognitionException [1]
    {   
        ZilParser.macro_return retval = new ZilParser.macro_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken PERCENT22 = null;
        IToken PERCENT23 = null;
        ZilParser.expr_return expr24 = default(ZilParser.expr_return);

        ZilParser.expr_return expr25 = default(ZilParser.expr_return);


        object PERCENT22_tree=null;
        object PERCENT23_tree=null;
        RewriteRuleTokenStream stream_PERCENT = new RewriteRuleTokenStream(adaptor,"token PERCENT");
        RewriteRuleSubtreeStream stream_expr = new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try 
    	{
            // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:101:2: ( PERCENT ( ( PERCENT )=> PERCENT expr -> ^( VMACRO expr ) | expr -> ^( MACRO expr ) ) )
            // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:101:4: PERCENT ( ( PERCENT )=> PERCENT expr -> ^( VMACRO expr ) | expr -> ^( MACRO expr ) )
            {
            	PERCENT22=(IToken)Match(input,PERCENT,FOLLOW_PERCENT_in_macro676); if (state.failed) return retval; 
            	if ( (state.backtracking==0) ) stream_PERCENT.Add(PERCENT22);

            	// C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:102:3: ( ( PERCENT )=> PERCENT expr -> ^( VMACRO expr ) | expr -> ^( MACRO expr ) )
            	int alt4 = 2;
            	alt4 = dfa4.Predict(input);
            	switch (alt4) 
            	{
            	    case 1 :
            	        // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:102:5: ( PERCENT )=> PERCENT expr
            	        {
            	        	PERCENT23=(IToken)Match(input,PERCENT,FOLLOW_PERCENT_in_macro687); if (state.failed) return retval; 
            	        	if ( (state.backtracking==0) ) stream_PERCENT.Add(PERCENT23);

            	        	PushFollow(FOLLOW_expr_in_macro689);
            	        	expr24 = expr();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( (state.backtracking==0) ) stream_expr.Add(expr24.Tree);


            	        	// AST REWRITE
            	        	// elements:          expr
            	        	// token labels:      
            	        	// rule labels:       retval
            	        	// token list labels: 
            	        	// rule list labels:  
            	        	// wildcard labels: 
            	        	if ( (state.backtracking==0) ) {
            	        	retval.Tree = root_0;
            	        	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	        	root_0 = (object)adaptor.GetNilNode();
            	        	// 102:30: -> ^( VMACRO expr )
            	        	{
            	        	    // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:102:33: ^( VMACRO expr )
            	        	    {
            	        	    object root_1 = (object)adaptor.GetNilNode();
            	        	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(VMACRO, "VMACRO"), root_1);

            	        	    adaptor.AddChild(root_1, stream_expr.NextTree());

            	        	    adaptor.AddChild(root_0, root_1);
            	        	    }

            	        	}

            	        	retval.Tree = root_0;retval.Tree = root_0;}
            	        }
            	        break;
            	    case 2 :
            	        // C:\\Users\\Jesse\\Documents\\ZIL\\Zilf\\Zilf\\Zil.g:103:5: expr
            	        {
            	        	PushFollow(FOLLOW_expr_in_macro703);
            	        	expr25 = expr();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( (state.backtracking==0) ) stream_expr.Add(expr25.Tree);


            	        	// AST REWRITE
            	        	// elements:          expr
            	        	// token labels:      
            	        	// rule labels:       retval
